demo-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: tmp-web
  name: tmp-web
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tmp-web
  template:
    metadata:
      labels:
        app: tmp-web
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: hello-app

---

kind: Service
apiVersion: v1
metadata:
  name: tmp-web
spec:
  type: LoadBalancer
  selector:
    app: tmp-web
  ports:
    - name: tmp-web
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmp-web-ingress
  labels:
    app: tmp-web
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: tmp-web
                port:
                  number: 80
